--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,40 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Caesar Cipher</title>
+    <title>Cifra de César</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div id="root">
-      <h1>Hello world!</h1>
-    </div>
+    
+    <main class="main container">
+      <header class="cabecalho">
+      <h1>Codifique e descodifique suas mensagens!</h1>
+      </header>
+
+      <div class="container-input">
+        <div class="input">
+          <textarea id="input-text" placeholder="Digite o texto"></textarea>
+        </div> 
+
+        <div id="output"> 
+            <h2>Mensagem codificada/descodificada</h2>
+            <p id="resultado">            
+            </p>
+        </div>
+
+      </div>
+
+      <div class="buttons">
+        <div class="container-btn">
+          <p>Digite o número de deslocamento desejado:</p>
+          <input type="number" id="offset"><br><br>
+            <button id="criptografar" class="btn-criptografar">Criptografar</button>
+            <button id="descriptografar" class="btn-descriptografar">Descriptografar</button>
+        </div>
+      </div>
+    </main>
+
+    
     <script src="index.js" type="module"></script>
   </body>
 </html>
